src/objects/tdc_tsw__ChatTranscript__c.object
<CustomObject>
    <fields>
        <fullName>tdc_tsw__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Chat Transcripts</relationshipLabel>
        <relationshipName>Chat_Transcripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Chat_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chat Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Chat_Conversation__c</fullName>
        <label>Chat Conversation</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Chat_Duration__c</fullName>
        <label>Chat Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Chat_End_Time__c</fullName>
        <label>Chat End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Chat_Start_Time__c</fullName>
        <label>Chat Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Chat Transcripts</relationshipLabel>
        <relationshipName>Chat_Transcripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Chat Transcripts</relationshipLabel>
        <relationshipName>Chat_Transcripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Related_ObjectId__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; tdc_tsw__Related_Object_Id__c , tdc_tsw__Related_Object__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Related_Object_Id__c</fullName>
        <label>Related Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Related_Object__c</fullName>
        <label>Related Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Sender_Number__c</fullName>
        <label>Sender Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__To_Number__c</fullName>
        <label>To Number</label>
        <type>Phone</type>
    </fields>
    <label>Chat Transcript</label>
    <nameField>
        <displayFormat>CT-{00000}</displayFormat>
        <label>Chat Transcript Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Transcripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>